...
@Composable
fun NewSessionView(viewModel: NewSessionViewModel) {
    val group by viewModel.groupState

    MyApplicationTheme3 {
        Scaffold(
            modifier = Modifier.semantics { contentDescription = "NewSessionView" },
            containerColor = MaterialTheme.colorScheme.surface,
            topBar = {
                TopBar(
                    title = "Nächste Lernsession",
                    subtitle = group?.name ?: "",
                    actions = {
                        IconButton(
                            modifier = Modifier.semantics { contentDescription = "SaveSessionButton" },
                            onClick = { viewModel.saveNewSession() }) {
                            Icon(
                                Icons.Filled.Save,
                                contentDescription = "Knopf um die Nutzerdaten zu speichern."
                            )
                        }
...
