...
        val sessions by viewModel.sessions
        val groupMembers by viewModel.members
        val groupRequests by viewModel.requests

        Scaffold(
            modifier = Modifier.semantics {
                contentDescription = "JoinedGroupDetailsView"
            },
            topBar = {
                TopBar(
                    title = group?.name ?: "",
                    subtitle = group?.lecture?.lectureName ?: "",
                    navClick = { viewModel.navBack() },
...
                            ?: "").filter { it != "" },
                    chapterNumber = group?.lectureChapter,
                    exerciseSheetNumber = group?.exercise
                )
                if (sessions.isEmpty() && viewModel.isAdmin.value) {
                    Button(
                        modifier = Modifier.semantics { contentDescription = "NewSessionButton" },
                        text = "Nächste Lernsession planen",
                        onClick = { viewModel.planSession() })
                } else if (sessions.isNotEmpty()) {
                    Row(horizontalArrangement = Arrangement.spacedBy(12.dp)) {
                        if (viewModel.isAdmin.value) {
                            Button(
...
